2007-04-28  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Allowing I1, I2, etc. in charge
	equations for now.  Some more bug fixes.

2007-04-23  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp: Fixed bug when using the EDD in a
	subcircuit.

2007-04-19  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.cpp (calcHB): Added HB callbacks.  Fixed
	bug in DC calculations.

2007-04-18  Stefan Jahn  <stefan@lkcc.org>

	* devices/eqndefined.h (class eqndefined): Added the equation
	defined device (i.e. explicit equations for I(V) and Q(V)).

2007-04-15  Stefan Jahn  <stefan@lkcc.org>

	* vexp.h (class vexp), iexp.h (class iexp): New components:
	exponential voltage and current pulse sources.

2007-03-11  Stefan Jahn  <stefan@lkcc.org>

	* vac.cpp, iac.cpp: Adjusted time dependency of damping
	factor.

	* microstrip/mscross.cpp: Compute omega only once.

	* microstrip/bondwire.cpp: Fixed some typos in the doxygen
	documentation/comments.

2007-03-07  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Again fixed attenuation model.  Added
	an appropriate DC model.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* twistedpair.cpp: Added preliminary loss model as well as
	the noise models for AC and SP due to the losses.

2007-03-01  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Fixed derivative for knee current.

2007-02-28  Stefan Jahn  <stefan@lkcc.org>

	* devices/diode.cpp: Implemented knee current parameter Ikf.

2007-02-21  Stefan Jahn  <stefan@lkcc.org>

	* tline4p.cpp: Implemented transient simulation model of
	the 4-terminal transmission line.

2007-02-18  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>

	* microstrip/mscross.cpp: fixed bug in calcCap() equation

2007-02-12  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msstep.cpp: Fixed Z-parameter matrix calculation.
	Thanks <c.peschke@gsi.de> for pointing out this bug.

2007-02-07  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscross.cpp: Hopefully finally fixed the